--- a/register.html
+++ b/register.html
@@ -11,8 +11,8 @@
 
 <body>
     <div id="main_wrapper">
-    <form id="user_crud" method="POST" action="login.php">
-        <p>Giriş yapmak için gerekli bilgileri giriniz.</p>
+    <form id="user_crud" method="POST" action="register.php">
+        <p>Kayıt olmak için aşağıdaki formu doldurunuz.</p>
         <div id="username_wrapper" class="form_item">
             <label for="username">Username</label>
             <input type="text" name="username" class="input_text">
@@ -22,7 +22,7 @@
             <input type="password" name="password" class="input_text">
         </div>
         <input type="submit" id="form_submit">
-        <p class="register_link"><a href="register.html">Kayıt</a></p>
+        <p class="register_link"><a href="index.html">Login</a></p>
     </form>
     </div>
 </body>
